# coauthorcheck

./: .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  RULES.md  main.py  pyproject.toml
.github/actions/coauthorcheck/: action.yml
.github/workflows/: ci.yml  github-release.yml  release.yml
coauthorcheck/: __init__.py  cli.py  config.py  git_utils.py  models.py  parser.py  validation.py
docs/: integrations.md  policies.md  rules.md
examples/: README.md
examples/github-actions/: branch-validation.yml  pr-comment.yml  pr-validation.yml
tests/: conftest.py  test_cli.py  test_config.py  test_git_utils.py  test_validation.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_config.py  test_parser.py  test_validation.py
